Kubernetes.yaml
# mysql service
apiVersion: v1
kind: Service
metadata:
  name: stan-mysql
  labels:
    app: stan-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: stan-mysql
---
# mysql deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stan-mysql
  labels:
    app: stan-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stan-mysql
  template:
    metadata:
      labels:
        app: stan-mysql
    spec:
      containers:
        - name: stan-mysql
          image: mysql
          ports:
            - containerPort: 3306
---
# phpmyadmin service
apiVersion: v1
kind: Service
metadata:
  name: stan-phpmyadmin
  labels:
    app: stan-phpmyadmin
spec:
  ports:
    - port: 80
  selector:
    app: stan-phpmyadmin
---
# phpmyadmin deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stan-phpmyadmin
  labels:
    app: stan-phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stan-phpmyadmin
  template:
    metadata:
      labels:
        app: stan-phpmyadmin
    spec:
      containers:
        - name: stan-phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---
# php-apache service
apiVersion: v1
kind: Service
metadata:
  name: stan-php-apache
  labels:
    app: stan-php-apache
spec:
  ports:
    - port: 80
  selector:
    app: stan-php-apache
---
# php-apache deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stan-php-apache
  labels:
    app: stan-php-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stan-php-apache
  template:
    metadata:
      labels:
        app: stan-php-apache
    spec:
      containers:
        - name: stan-php-apache
          image: php-apache:0.1.3
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
---
# php-apache ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stan-php-apache
  annotations:
    php-apache.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - web.sslip.io
      secretName: stan-php-apache-tls
  rules:
    - host: web.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stan-php-apache
                port:
                  number: 80
---
# phpmyadmin ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stan-phpmyadmin
  annotations:
    phpmyadmin.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - phpmyadmin.sslip.io
      secretName: stan-phpmyadmin-tls
  rules:
    - host: phpmyadmin.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stan-phpmyadmin
                port:
                  number: 80
